<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".app.ui.register.AboutMeSignInFragment"

    android:paddingVertical="@dimen/_8dp"
    android:paddingHorizontal="@dimen/_16dp"

    android:background="@color/background_color">

    <LinearLayout
        android:id="@+id/linearLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:gravity="center_vertical"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/back"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:background="@color/transparent"
                    android:contentDescription="@string/back_arrow"
                    android:scaleType="centerCrop"

                    android:src="@drawable/arrow_right" />

                <Space
                    android:layout_width="@dimen/_8dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/manrope_bold"
                    android:text="@string/about_me"
                    android:textColor="@color/dark_grey_normal"
                    android:textSize="@dimen/body_large" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="end">

                <Button
                    android:id="@+id/skip"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:background="@color/transparent"

                    android:text="@string/skip"
                    android:textSize="@dimen/body_small"
                    android:fontFamily="@font/manrope_medium"
                    android:textColor="@color/dark_grey_normal"

                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:padding="0dp"/>
            </LinearLayout>



        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/manrope"
            android:text="@string/write_a_few_sentences_about_yourself_and_your_life"
            android:textColor="@color/dark_grey_light"
            android:textSize="@dimen/body_small" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_16dp" />

        <EditText
            android:id="@+id/about_me_edit_text"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/disable_input_drawable"
            android:gravity="top|start"

            android:fontFamily="@font/manrope_medium"
            android:hint="@string/about_me_placeholder"
            android:inputType="textMultiLine"
            android:lineHeight="20dp"
            android:maxLength="300"
            android:textColor="@color/dark_grey_normal"
            android:textColorHint="@color/dark_grey_light"
            android:textSize="@dimen/body_medium"

            android:minHeight="180dp"
            android:paddingHorizontal="@dimen/_16dp"
            android:paddingVertical="@dimen/_16dp"

            tools:targetApi="p" />
    </LinearLayout>

    <TextView
        android:id="@+id/counter"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/_4dp"
        android:layout_marginEnd="@dimen/_4dp"

        android:text="@string/_1_d_300"
        android:textAlignment="textEnd"
        android:fontFamily="@font/manrope_medium"
        android:textSize="@dimen/body_xsmall"

        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continue"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/selector_button_drawable"
        android:enabled="true"
        android:paddingVertical="@dimen/_16dp"

        android:fontFamily="@font/manrope_bold"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/body_large"

        android:stateListAnimator="@null"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>