<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".app.ui.signin.CitySignInFragment"

    android:paddingVertical="@dimen/_8dp"
    android:paddingHorizontal="@dimen/_16dp"

    android:background="@color/background_color">

    <LinearLayout
        android:id="@+id/linearLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@color/transparent"
                android:contentDescription="@string/back_arrow"
                android:scaleType="centerCrop"

                android:src="@drawable/arrow_right" />

            <Space
                android:layout_width="@dimen/_8dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/manrope_bold"
                android:text="@string/my_city"
                android:textColor="@color/dark_grey_normal"
                android:textSize="@dimen/body_large" />

        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_16dp" />

        <RelativeLayout
            android:id="@+id/select_city"

            android:layout_width="match_parent"
            android:layout_height="56dp"

            android:gravity="center_vertical">

            <TextView
                android:id="@+id/city_text_view"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/selector_input_drawable"

                android:drawablePadding="4dp"
                android:fontFamily="@font/manrope_medium"

                android:gravity="center_vertical"
                android:hint="@string/select_your_city"

                android:maxLength="32"

                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                android:textColor="@color/dark_grey_normal"
                android:textColorHint="@color/dark_grey_light"
                android:textSize="@dimen/body_medium"
                app:drawableStartCompat="@drawable/map_pin" />

            <ImageButton
                android:id="@+id/choose"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"

                android:layout_marginEnd="@dimen/_16dp"

                android:background="@color/transparent"
                android:contentDescription="@string/choose_city"
                android:scaleType="centerCrop"

                android:src="@drawable/caret_right_sm"

                android:visibility="visible" />

        </RelativeLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continue"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/selector_button_drawable"
        android:enabled="false"
        android:paddingVertical="@dimen/_16dp"

        android:fontFamily="@font/manrope_bold"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/body_large"

        android:stateListAnimator="@null"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>