<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".app.ui.signin.GenderSignInFragment"

    android:paddingVertical="@dimen/_8dp"
    android:paddingHorizontal="@dimen/_16dp"
    android:background="@color/background_color">

    <LinearLayout
        android:id="@+id/linearLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_horizontal"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@color/transparent"
                android:contentDescription="@string/back_arrow"
                android:scaleType="centerCrop"

                android:src="@drawable/arrow_right" />

            <Space
                android:layout_width="@dimen/_8dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/manrope_bold"
                android:text="@string/i_am"
                android:textColor="@color/dark_grey_normal"
                android:textSize="@dimen/body_large" />

        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group"

        android:layout_width="match_parent"
        android:layout_height="@dimen/radio_group_height"

        android:background="@drawable/disable_input_drawable"
        android:orientation="horizontal"

        app:layout_constraintBottom_toTopOf="@+id/button_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <RadioButton
            android:id="@+id/gender_man"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:background="@drawable/radiobutton_selector"
            android:button="@color/transparent"
            android:checked="true"
            android:fontFamily="@font/manrope_semibold"

            android:gravity="center"
            android:text="@string/man"
            android:textAlignment="center"
            android:textColor="@drawable/radiobutton_text_selector"
            android:textSize="@dimen/body_medium" />

        <RadioButton
            android:id="@+id/gender_woman"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:background="@drawable/radiobutton_selector"
            android:button="@color/transparent"
            android:fontFamily="@font/manrope_semibold"

            android:gravity="center"
            android:text="@string/woman"
            android:textAlignment="center"
            android:textColor="@drawable/radiobutton_text_selector"
            android:textSize="@dimen/body_medium" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continue"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingVertical="@dimen/body_large"

        android:fontFamily="@font/manrope_bold"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/body_large"

        android:background="@drawable/selector_button_drawable"
        android:stateListAnimator="@null"
        android:enabled="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>