<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/_16dp"
    android:paddingVertical="@dimen/_16dp"
    android:background="@drawable/background_bottom_sheet_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/body_medium"
            android:textColor="@color/dark_grey_normal"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/select_source"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_8dp"/>

        <LinearLayout
            android:id="@+id/camera_linear_layout"
            android:paddingVertical="@dimen/_8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/camera" />

            <Space
                android:layout_width="@dimen/_8dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/camera"
                android:textSize="@dimen/body_medium"
                android:textColor="@color/dark_grey_normal" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_8dp"/>

        <LinearLayout
            android:id="@+id/gallery_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/gallery" />

            <Space
                android:layout_width="@dimen/_8dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/gallery"
                android:textSize="@dimen/body_medium"
                android:textColor="@color/dark_grey_normal" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>